unpackaged/main/default/objects/csplit__Case_Split_Settings__c/csplit__Case_Split_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Case Split Settings</label>
</CustomObject>