unpackaged/main/default/objects/csplit__Case_Split_Settings__c/fields/csplit__Add_Case_Team_Member_by_Default__c.field-meta.xml
<CustomField>
    <fullName>csplit__Add_Case_Team_Member_by_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Case Team Member by Default</label>
    <type>Checkbox</type>
</CustomField>