unpackaged/main/default/objects/csplit__Case_Split_Settings__c/fields/csplit__App_Branding_Updated__c.field-meta.xml
<CustomField>
    <fullName>csplit__App_Branding_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all branding for the Case Split App was updated to the latest Vicasso branding.</description>
    <label>App Branding Updated</label>
    <type>Checkbox</type>
</CustomField>