unpackaged/main/default/objects/csplit__Case_Split_Settings__c/fields/csplit__Default_Case_Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>csplit__Default_Case_Team_Member_Role__c</fullName>
    <label>Default Case Team Member Role</label>
    <length>18</length>
    <type>Text</type>
</CustomField>