unpackaged/main/default/objects/csplit__Case_Split_Settings__c/fields/csplit__Disable_Record_Type_Protection__c.field-meta.xml
<CustomField>
    <fullName>csplit__Disable_Record_Type_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Case Split Users to split to Existing Cases even if they don't have access to the existing case's record type.</description>
    <label>Disable Record Type Protection</label>
    <type>Checkbox</type>
</CustomField>