unpackaged/main/default/objects/csplit__Case_Split_Settings__c/fields/csplit__Drag_Drop_Related_Records__c.field-meta.xml
<CustomField>
    <fullName>csplit__Drag_Drop_Related_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drag/Drop Related Records</label>
    <type>Checkbox</type>
</CustomField>