unpackaged/main/default/objects/csplit__Case_Split_Settings__c/fields/csplit__Enable_Case_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>csplit__Enable_Case_Team_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Case Team Members</label>
    <type>Checkbox</type>
</CustomField>