unpackaged/main/default/objects/csplit__Case_Split_Settings__c/fields/csplit__Enable_Split_to_Existing_Case__c.field-meta.xml
<CustomField>
    <fullName>csplit__Enable_Split_to_Existing_Case__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Split to Existing Case</label>
    <type>Checkbox</type>
</CustomField>