unpackaged/main/default/objects/csplit__Case_Split_Settings__c/fields/csplit__Redirect_to_Original_Case__c.field-meta.xml
<CustomField>
    <fullName>csplit__Redirect_to_Original_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redirect to Original Case</label>
    <type>Checkbox</type>
</CustomField>